# oxikey

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
examples/: oxikeybd0.rs
hardware/bd0/: bd0.kicad_pcb  bd0.kicad_prl  bd0.kicad_pro  bd0.kicad_sch  bd0_config.yml  fp-lib-table  sym-lib-table
hardware/bd1/: Connectors.kicad_sch  bd1.kicad_pcb  bd1.kicad_prl  bd1.kicad_pro  bd1.kicad_sch  bd1_config.yml
hardware/lib/Conn_CUI_SJ-4351/: Conn_CUI_SJ-4351.kicad_sym
hardware/lib/Conn_CUI_SJ-4351/Conn_CUI_SJ-4351.models/: CUI_-_SJ-43514-SMT.step  CUI_-_SJ-43514.step  CUI_-_SJ-43515TS-SMT-TR.step
hardware/lib/Conn_CUI_SJ-4351/Conn_CUI_SJ-4351.pretty/: CUI-SJ-43514-0.kicad_mod  CUI-SJ-43514-SMT-0.kicad_mod  CUI-SJ-43515TS-SMT-TR-0.kicad_mod
hardware/lib/Signature/: Signature.kicad_mod
src/: lib.rs  main.rs  setup.rs
