[package]
name = "oxikey"
version = "0.0.0"
edition = "2021"
description = "WIP library for building custom keyboards"
readme = "README.md"
keywords = ["keyboard", "hid", "usb", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
authors = ["n8tlarsen"]
repository = "https://github.com/n8tlarsen/oxikey"

[dependencies]
bitfield = "^0.13.2"    
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.0"
panic-halt = "0.2.0"
atsamd21g = {version = "0.12.0", features = ["rt"]}
cortex-m-rtic = "1.1.3"
usb-device = "0.2.9"
usbd-hid = "0.6.0"

[dependencies.atsamd-hal]
features = ["samd21g","rtic-monotonic","usb"]
version = "0.15.1"

[patch.crates-io]
atsamd-hal = {version = "0.15.1", path = "../atsamd/hal"}
atsamd21g  = {version = "0.12.0", path = "../atsamd/pac/atsamd21g"}

[lib]
name = "oxikey"
test = false
doctest = true
bench = false
doc = true
edition = "2021"

[[example]]
name = "oxikeybd0"
test = false
bench = false

[profile.dev]
opt-level = "s"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
codegen-units = 1 # no parallel code units for better optimizations
lto = true # link time optimizations
