[package]
name = "oxikey"
version = "0.0.0"
edition = "2021"
description = "WIP library for building custom keyboards"
readme = "README.md"
keywords = ["keyboard", "hid", "usb", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
authors = ["n8tlarsen"]
repository = "https://github.com/n8tlarsen/oxikey"

[dependencies]
cortex-m = { version = "0.7.5", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.0"
heapless = "0.7.16"
usb-device = "0.2.9"
usbd-hid = "0.6.0"

[lib]
name = "oxikey"
test = false
doctest = true
bench = false
doc = true
edition = "2021"

[[example]]
name = "oxikeybd0"
test = false
bench = false

[dev-dependencies.defmt]
version = "0.3"
features = ["encoding-rzcobs"]

[dev-dependencies.defmt-brtt]
version = "0.1"
default-features = false
features = ["rtt"]

[dev-dependencies]
panic-halt = "0.2"

[dev-dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[dev-dependencies.rtic]
version = "2.0.0-alpha.2" 
features = ["thumbv6-backend"]

[dev-dependencies.atsamd-hal]
version = "0.15.1"
features = ["samd21g-rt", "usb"]

[patch.crates-io]
atsamd-hal = {git = "https://github.com/atsamd-rs/atsamd"}
usbd-hid   = {git = "https://github.com/twitchyliquid64/usbd-hid"}

[profile.dev]
opt-level = "s"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
codegen-units = 1 # no parallel code units for better optimizations
lto = true # link time optimizations
